public/stylesheets/contest.css
.container {
    display: grid;
    grid-template-rows: 15% auto;
    grid-template-columns: minmax(10em, 14em) minmax(50em, 3000em);
    /*                    1   2     3   */
    background-color: var(--contest-bg);
    margin: 0;
    max-height: 100vh;
}

.header {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;

    display: grid;
    grid-template-rows: 100%;
    grid-template-columns: auto 4% 10%;

    background-color: var(--contest-header-bg);
}

.header h1 {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;

    margin-left: 0.5em;
    margin-right: 0.5em; 
    color: var(--contest-header);
}

.sidebar {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 3;

    padding-bottom: 100%;

    /*background-color: #6795ff;*/
    background-color: var(--contest-sidebar-color);
}

.header .userImg {
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 2;
    margin: auto;
    color: white;
    max-height: 5em;
    max-width: 100%;
}

.header .userName {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 2;
    margin: auto;
    color: white;
    padding: 0 1em;
    max-width: calc(100% - 2em);
    overflow: hidden;
    text-overflow: ellipsis;
}
.header .userName:hover{
    word-wrap: break-word;
}

.timer {
    color: var(--contest-timer);
    font-size: 22pt;

    margin-left: 1em;
}

.problemBox {
    display: grid;
    grid-template-columns: auto 15%;
    grid-template-rows: 20% auto auto;
    /*                 1   2    3    4*/

    margin-top: 0.5em;
    margin-bottom: 0.5em;
    margin-right: 0.7em;
    margin-left: 0;

    /*border: solid grey 1px;*/
    padding: 0.6em;
    border-radius: 0 0.2em 0.2em 0;
}

h2.problemTitle {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
    color: var(--contest-problem-title-heading);
    font-weight: 800;
    margin-top: 0;
}

div.problemTitle {
    color: var(--contest-problem-list-title);
    font-weight: 800;
}

.score{
    color: var(--contest-problem-list-score);
    text-align: center;
}

.problemScore {
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;
}

.link {
    color: rgb(50, 50, 50);
    /*text-decoration: none !important;*/
}

.statementLink {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;

    margin-top: 0.3em;
    margin-bottom: 0.2em;

    font-weight: 100;
    font-size: 10pt;
}

.submissionLink {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 3;
    grid-row-end: 4;

    font-weight: 100;
    font-size: 10pt;

    margin-bottom: 0.2em;
}

.alert-icon {
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 3;
    grid-row-end: 4;
    display: none;
}
.alert-icon::before{
    background-image: url('/utility/alert');
    content:'';
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    width: 100%;
    height: 100%;
}
.problemBox.alert .alert-icon::before, .problemBox.alert .alert-icon{
    display: inline-block;
}

.hide {
    display: none;
}

.openProblem, .problemBox:hover {
    margin-right: 0em;
    border-radius: 0!important;
    transition: ease-in .1s;
}

.greenScore {
    /*background: green;*/
    background-color: var(--contest-problem-fullScore);
}

.orangeScore {
    /*background: orange;*/
    background-color: var(--contest-problem-mediumScore);
}

.redScore {
    /*background: red;*/
    background-color: var(--contest-problem-lowScore);
}

.content {
    padding: 2em;
    padding-right: 3em;
    grid-row-start: 2;
    grid-row-end: 3;
}

